--- a/TP Grupal  Progra-C/.classpath
+++ b/TP Grupal  Progra-C/.classpath
@@ -16,5 +16,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="lib/mysql-connector-j-9.5.0.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
